# stablerandom

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/stablerandom/: stablerandom.py  stablerandom_test.py
stablerandom/: __init__.py  stablerandom.py  stablerandom_test.py
