[tool.poetry]
name = "stablerandom"
version = "0.1"
description = "Create stable/repeatable numpy.random applications"
authors = ["John Heintz <john@gistlabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
