[tool.poetry]
name = "stablerandom"
version = "0.2"
description = "Create stable/repeatable numpy.random applications"
authors = ["John Heintz <john@gistlabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
