[metadata]
name = stablerandom
author = John Heintz
version = pkg: .__version__
description = Create stable/repeatable numpy.random applications
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/GistLabs/stablerandom
project_urls =
    Bug Tracker = https://github.com/GistLabs/stablerandom/issues
    Changelog = https://github.com/GistLabs/stablerandom/releases
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers

[options]
package_dir =
    = stablerandom
packages = find:
python_requires = >=3.9, <4
install_requires =
    numpy

[options.packages.find]
where = stablerandom
